# irig106-time

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: correlation_bench.rs  time_benchmarks.rs
docs/: L1_REQUIREMENTS_F2_ADDENDUM.md  L1_Requirements.md  L2L3_REQUIREMENTS_F2_ADDENDUM.md  L2_Requirements.md  L3_Requirements.md  ROADMAP.md  architecture.md  benchmark_results.md  cli_commands.md  project_structure.md  security.md  shared_types_for_irig106_types2.md  test_index.md  udp_framing.md  usage.md  why_separate_repo.md
docs/diagrams/: correlation_flow.mermaid  ecosystem.mermaid  module_deps.mermaid  traceability.mermaid
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bcd_day.rs  fuzz_bcd_dmy.rs  fuzz_correlation.rs  fuzz_csdw.rs  fuzz_ieee1588.rs  fuzz_intra_packet.rs  fuzz_ntp.rs  fuzz_ptp.rs  fuzz_rtc.rs  fuzz_secondary_header.rs
irig106-time-cli/: Cargo.toml  README.md
irig106-time-cli/src/: main.rs
src/: absolute.rs  absolute_tests.rs  bcd.rs  bcd_tests.rs  chrono_interop.rs  correlation.rs  correlation_tests.rs  csdw.rs  csdw_tests.rs  error.rs  error_tests.rs  intra_packet.rs  intra_packet_tests.rs  lib.rs  network_time.rs  network_time_tests.rs  packet_standard.rs  packet_standard_tests.rs  quality.rs  quality_tests.rs  recording_event.rs  recording_event_tests.rs  rtc.rs  rtc_tests.rs  secondary.rs  secondary_tests.rs  streaming.rs  streaming_tests.rs  util.rs  version.rs  version_tests.rs
tests/: pipeline.rs  properties.rs
