[package]
name = "irig106-time"
version = "0.7.0"
edition = "2021"
rust-version = "1.87"
description = "Precision time interpretation and format conversion for IRIG 106 telemetry data."
repository = "https://github.com/TelemetryWorks/irig106-time"
license = "Apache-2.0"
categories = ["aerospace", "parser-implementations", "no-std"]
keywords = ["irig106", "telemetry", "time", "chapter10", "flight-test"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
chrono = ["dep:chrono"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "time_benchmarks"
harness = false

[[bench]]
name = "correlation_bench"
harness = false
